--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,19 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-8">
+          <%= yield %>
+        </div>
+
+        <div class="col-sm-4">
+          <div class="sidebar">
+            <h3>My Sidebar</h3>
+            <p>Click on things</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
