--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,40 +39,17 @@
             <a class="nav-link disabled" href="#">Disabled</a>
           </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
+        <span class="navbar-text">
+          <a class="nav-link" href="#">Login</a>
+        </span>
+
+        <span>
+          <a class="nav-link" href="#">Signup</a>
+        </span>
       </div>
     </nav>
     <div class="container">
-      <div class="row">
-        <div class="col-sm-8">
-          <%= yield %>
-        </div>
-
-        <div class="col-sm-4">
-          <div class="sidebar">
-            <h3>My Sidebar</h3>
-            <p>Click on things</p>
-
-            <div class="btn-group-vertical" role="group" aria-label="Button group with nested dropdown">
-              <button type="button" class="btn btn-secondary">1</button>
-              <button type="button" class="btn btn-secondary">2</button>
-
-              <div class="btn-group" role="group">
-                <button id="btnGroupDrop1" type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Dropdown
-                </button>
-                <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-                  <a class="dropdown-item" href="#">Dropdown link</a>
-                  <a class="dropdown-item" href="#">Dropdown link</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+      <%= yield %>
     </div>
   </body>
 </html>
