--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,5 @@
 <!-- welcome/index.html.erb -->
-<h1>Welcome to MSET</h1>
+<div class="center">
+  <h1>Welcome to MSET</h1>
+</div>
 <p>Hello. I am your virtual pharmaceutical friend.</p>
