Add Log In link to OAuth

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
           </li> -->
         </ul>
         <span class="navbar-text">
-          <a class="nav-link" href="#">Login</a>
+          <%= link_to 'Log In', '/auth/google_oauth2' %>
         </span>
 
         <span>
