Add 'Add Medication' link

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,3 +3,4 @@
   <h1>Welcome to MSET</h1>
 </div>
 <p>Hello. I am your virtual pharmaceutical friend.</p>
+<%= link_to 'Add Medication', '/medications/new' %>
