--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,5 @@
-<!-- welcome/index.html.erb -->
+<center>
+  <h1>Welcome to MSET!</h1>
+  <br>
+  <%= button_to 'Get Started with Google Login', '/auth/google_oauth2', method: :get %>
+</center>
