--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,6 +42,11 @@
         <span>
           <a class="nav-link" href="#">Signup</a>
         </span>
+
+<!-- implement conditional logic for logout button to appear when current_user exists -->
+        <!-- <span>
+          <a class="nav-link" href="#">Signup</a>
+        </span> -->
       </div>
     </nav>
     <div class="container">
