Add note re: footer to implement

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,5 +52,6 @@
     <div class="container">
       <%= yield %>
     </div>
+    <!-- add footer w note acknowledging openFDA API -->
   </body>
 </html>
