--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,8 +18,9 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
+          <!-- these menu items should only appear when user logged in -->
           <li class="nav-item">
-            <a class="nav-link" href="#">Dashboard</a>
+            <a class="nav-link" <%= link_to "Dashboard", dashboard_path  %></a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -42,7 +43,6 @@
         <span>
           <a class="nav-link" href="#">Signup</a>
         </span>
-
 <!-- implement conditional logic for logout button to appear when current_user exists -->
         <!-- <span>
           <a class="nav-link" href="#">Signup</a>
