--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,7 +1,25 @@
 <div class="grid-container">
-  <div class="profile"></div>
-  <div class="med-list"></div>
-  <div class="nav"></div>
-  <div class="log-form"></div>
-  <div class="recent-logs"></div>
+  <div class="sidebar">
+    <div class="profile">
+      <h3>Profile</h3>
+      <p><strong>FirstName LastName</strong></p>
+      <p><strong>Date of birth:</strong> "YYYY-MM-DD"</p>
+      <p><strong>Weight:</strong> 150 lbs</p>
+      <p></p>
+    </div>
+    <div class="med-list">
+      <h3>Medication List</h3>
+      <ul>
+        <li>adderall</li>
+        <li>adderall</li>
+        <li>adderall</li>
+      </ul>
+    </div>
+  </div>
+  <div class="log-form">
+    <h3>Log a symptom here</h3>
+  </div>
+  <div class="recent-logs">
+    <h3>Recent symptom logs</h3>
+  </div>
 </div>
