--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,3 +1,8 @@
+<center>
+  <h2>Welcome, <%= "#{current_user.first_name}!" %></h2>
+  <%= render partial: '/partials/flash' %>
+</center>
+
 <div class="grid-container">
   <div class="sidebar">
     <div class="profile">
