Displays individualized birthdate and weight info in profile section

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,19 +1,26 @@
 <center>
-  <h2>Welcome, <%= "#{current_user.first_name}!" %></h2>
+  <h2>Welcome, <%= current_user.full_name %>! </h2>
   <%= render partial: '/partials/flash' %>
 </center>
 
 <div class="grid-container">
   <div class="sidebar">
     <div class="profile">
-      <h3>Profile</h3>
-      <p><strong>FirstName LastName</strong></p>
-      <p><strong>Date of birth:</strong> "YYYY-MM-DD"</p>
-      <p><strong>Weight:</strong> 150 lbs</p>
+      <h5>Profile</h5>
+      <% if current_user.birthdate.empty? %>
+        <p><strong>Date of birth:</strong> not saved</p>
+      <% else %>
+        <p><strong>Date of birth:</strong> <%= current_user.birthdate %></p>
+      <% end %>
+      <% if current_user.weight.nil? %>
+        <p><strong>Weight:</strong> not saved</p>
+      <% else %>
+        <p><strong>Weight:</strong> <%= current_user.weight %> lbs</p>
+      <% end %>
       <p></p>
     </div>
     <div class="med-list">
-      <h3>Medication List</h3>
+      <h5>Medication List</h5>
       <ul>
         <li>adderall</li>
         <li>adderall</li>
