--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,17 +32,14 @@
               <a class="dropdown-item" href="#">Something else here</a>
             </div>
           </li>
-          <!-- <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
-          </li> -->
         </ul>
-        <span class="navbar-text">
+        <!-- <span class="navbar-text">
           <a class="nav-link" href="#">Login</a>
         </span>
 
         <span>
           <a class="nav-link" href="#">Signup</a>
-        </span>
+        </span> -->
 <!-- implement conditional logic for logout button to appear when current_user exists -->
         <!-- <span>
           <a class="nav-link" href="#">Signup</a>
