--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -7,7 +7,7 @@
   <div class="sidebar">
     <div class="profile">
       <h5>Profile</h5>
-      <% if current_user.birthdate.empty? %>
+      <% if current_user.birthdate.empty? || current_user.birthdate.nil? %>
         <p><strong>Date of birth:</strong> not saved</p>
       <% else %>
         <p><strong>Date of birth:</strong> <%= current_user.birthdate %></p>
@@ -17,7 +17,7 @@
       <% else %>
         <p><strong>Weight:</strong> <%= current_user.weight %> lbs</p>
       <% end %>
-      <p></p>
+      <button type="button">Edit Profile</button>
     </div>
     <div class="med-list">
       <h5>Medication List</h5>
@@ -26,12 +26,15 @@
         <li>adderall</li>
         <li>adderall</li>
       </ul>
+      <button type="button">Edit Medication List</button>
     </div>
   </div>
   <div class="log-form">
     <h3>Log a symptom here</h3>
+    <p>this is where the form will go</p>
   </div>
   <div class="recent-logs">
     <h3>Recent symptom logs</h3>
+    <p>this is where a list of recent logs will go</p>
   </div>
 </div>
