--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -27,6 +27,7 @@
         <li>adderall</li>
       </ul>
       <button type="button">Edit Medication List</button>
+      <%= button_to "Add New Medication", "/medications/new" %>
     </div>
   </div>
   <div class="log-form">
