Add find medication form and route to medications index page

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -27,7 +27,7 @@
         <li>adderall</li>
       </ul>
       <button type="button">Edit Medication List</button>
-      <%= button_to "Add New Medication", "/medications/new" %>
+      <%= button_to "Add New Medication", "/medications/new", method: :get %>
     </div>
   </div>
   <div class="log-form">
