--- a/app/views/medications/new.html.erb
+++ b/app/views/medications/new.html.erb
@@ -1,1 +1,7 @@
 <p>Enter brand medication name</p>
+<section class="med_search_form">
+  <%= form_tag "/medications", method: :get %>
+  <%= label_tag :medication_name %>
+  <%= text_field_tag :medication_name %>
+  <%= submit_tag "Find Medication" %>
+</section>
