--- a/app/views/medications/search.html.erb
+++ b/app/views/medications/search.html.erb
@@ -1,1 +1,6 @@
-<%= @med_hash %>
+<h4>Please select the correct medication brand name</h4>
+<section class='medications'>
+  <% @med_hash.each do |medication_name, product_ndc| %>
+    <p><%= link_to "#{medication_name}", '/medications/create', params: {name: medication_name, product_ndc: product_ndc}, method: :post %>
+  <% end %>
+</section>
