--- a/app/views/medications/new.html.erb
+++ b/app/views/medications/new.html.erb
@@ -1,4 +1,5 @@
 <p>Enter brand medication name</p>
+<p style="color:red"><%= render partial: '/partials/flash' %></p>
 <section class="med_search_form">
   <%= form_tag "/medications/search", method: :get %>
   <%= label_tag :medication_name %>
