Add link to logout to navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
             </li>
           </ul>
             <span class="navbar-text">
-              <a class="nav-link" href="#">Sign Out</a>
+              <a class="nav-link" <%= link_to 'Sign Out', logout_path %></a>
             </span>
         </div>
       <% end %>
