--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -26,11 +26,12 @@
         <button type="button">Add Medications</button>
       <% else %>
         <ul>
-          <li>adderall</li>
-          <li>adderall</li>
-          <li>adderall</li>
-        </ul>
-        <button type="button">Edit Medication List</button>
+           <% current_user.medications.each do |medication| %>
+             <li><%= medication.brand_name %></li>
+           <% end %>
+         </ul>
+         <button type="button">Edit Medication List</button>
+         <%= button_to "Add New Medication", "/medications/new", method: :get %>
       <% end %>
     </div>
   </div>
