--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -30,7 +30,7 @@
              <li><%= medication.brand_name %></li>
            <% end %>
          </ul>
-         <button type="button">Edit Medication List</button>
+         <%= button_to "Edit Medication List", "/medications/edit", method: :get %>
          <%= button_to "Add New Medication", "/medications/new", method: :get %>
       <% end %>
     </div>
