Add delete route

--- a/app/views/medications/edit.html.erb
+++ b/app/views/medications/edit.html.erb
@@ -3,6 +3,6 @@
 <% @medications.each do |medication| %>
   <section class="medications">
     <p><%= medication.brand_name %><p>
-    <p><%= button_to 'Delete', method: :delete %>
+    <p><%= button_to 'Delete', '/medications/delete', method: :delete %>
   </section>
 <% end %>
