--- a/app/views/medications/edit.html.erb
+++ b/app/views/medications/edit.html.erb
@@ -3,6 +3,6 @@
 <% @medications.each do |medication| %>
   <section class="medications">
     <p><%= medication.brand_name %><p>
-    <p><%= button_to 'Delete', '/medications/delete', method: :delete %>
+    <p><%= button_to 'Delete', '/medications/delete', params: {id: medication.id, name: medication.brand_name, product_ndc: medication.product_ndc}, method: :delete %>
   </section>
 <% end %>
