Complete destroy functionality for medications

--- a/app/views/medications/edit.html.erb
+++ b/app/views/medications/edit.html.erb
@@ -1,4 +1,5 @@
 <h1>All Medications</h1>
+<%= render partial: '/partials/flash' %>
 <br>
 <% @medications.each do |medication| %>
   <section class="medications">
