Update action now checks for first/last name; add flash message partial to edit form

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,6 @@
 <center>
   <h1>Edit Profile</h1>
+  <%= render partial: '/partials/flash' %>
   <%= form_tag "/users/#{current_user.id}", method: :patch do %>
     <%= label_tag :first_name %><br>
     <%= text_field_tag :first_name, "#{current_user.first_name}" %><br><br>
