Add footer to credit openFDA

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,6 +43,14 @@
     <div class="container">
       <%= yield %>
     </div>
-    <!-- add footer w note acknowledging openFDA API -->
+    <footer>
+      <center>
+        <%= image_tag '/assets/open_fda_logo.png', alt: 'openFDA Logo', width: '200', height: '50' %>
+        <p>
+          Thanks and credit for the drug information present in this application belong to <a href="https://open.fda.gov/">openFDA</a>.<br>
+          See <a href="https://open.fda.gov/apis/">API documentation</a> for more details.
+        </p>
+      </center>
+    </footer>
   </body>
 </html>
