--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,47 +10,47 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;"">
-      <% if current_user %>
-        <a class="navbar-brand" href="#">Main Menu</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <!-- does this ^ do anything? -->
+    <div class="content">
+      <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;"">
+        <% if current_user %>
+          <a class="navbar-brand" href="#">Main Menu</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <!-- does this ^ do anything? -->
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" <%= link_to "Dashboard", dashboard_path  %></a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Symptom Logs
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">View All Symptom Logs</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </div>
-            </li>
-          </ul>
-            <span class="navbar-text">
-              <a class="nav-link" <%= link_to 'Sign Out', logout_path %></a>
-            </span>
-        </div>
-      <% end %>
-    </nav>
-    <div class="container">
-      <%= yield %>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item">
+                <a class="nav-link" <%= link_to "Dashboard", dashboard_path  %></a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Symptom Logs
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="#">View All Symptom Logs</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+              </li>
+            </ul>
+              <span class="navbar-text">
+                <a class="nav-link" <%= link_to 'Sign Out', logout_path %></a>
+              </span>
+          </div>
+        <% end %>
+      </nav>
+      <div class="container">
+        <%= yield %>
+      </div>
     </div>
-    <footer>
-      <center>
-        <%= image_tag '/assets/open_fda_logo.png', alt: 'openFDA Logo', width: '200', height: '50' %>
-        <p>
-          Thanks and credit for the drug information present in this application belong to <a href="https://open.fda.gov/">openFDA</a>.<br>
-          See <a href="https://open.fda.gov/apis/">API documentation</a> for more details.
-        </p>
-      </center>
+    <footer class="footer">
+      <%= image_tag '/assets/open_fda_logo.png', alt: 'openFDA Logo', width: '160', height: '40' %>
+      <p>
+        Thanks and credit for the drug information present in this application belong to <a href="https://open.fda.gov/">openFDA</a>.<br>
+        See <a href="https://open.fda.gov/apis/">API documentation</a> for more details.
+      </p>
     </footer>
   </body>
 </html>
