--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,25 @@
  *
 
  */
+
+ html, body {
+   height: 100%;
+ }
+
+ body {
+   display: flex;
+   flex-direction: column;
+ }
+
+ .content {
+   flex: 1 0 auto;
+ }
+
+ footer,  {
+   flex-shrink: 0;
+   text-align: center;
+ }
+
 @import "bootstrap";
 @import "welcome";
 @import "dashboard";
