Display 10 most recent user symptom logs

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -70,7 +70,7 @@
           <p class="col"><strong>When</strong></p>
           <p class="col"><strong>Note</strong></p>
         </div>
-        <% current_user.logs.each do |log| %>
+        <% current_user.most_recent_logs.each do |log| %>
           <div class="row">
             <p class="col"><%= log.symptom_description %></p>
             <p class="col"><%= log.when %></p>
