--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -77,6 +77,8 @@
             <p class="col"><%= log.note %></p><br>
           </div>
         <% end %>
+        <br>
+        <%= button_to 'See All Logs', 'insert_path_here' %>
       <% end %>
     </center>
   </div>
