--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <%= javascript_include_tag 'application','jquery', 'data-turbolinks-track' => true  %>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= csrf_meta_tags %>
+</head>
 <center>
   <h2>Welcome, <%= current_user.full_name %>! </h2>
   <%= render partial: '/partials/flash' %>
@@ -27,7 +34,7 @@
       <% else %>
         <ul>
            <% current_user.medications.each do |medication| %>
-             <li><%= medication.brand_name %></li>
+             <li><%= medication.brand_name %> <%= link_to "Hide", "", class: 'hide', data: {'js-hide-link' => true} %>
            <% end %>
          </ul>
          <%= button_to "Edit Medication List", "/medications/edit", method: :get %>
@@ -76,3 +83,4 @@
     </center>
   </div>
 </div>
+</html>
