Add turbolinks gem

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<%# <!-- <!DOCTYPE html>
 <html>
   <head>
     <title>MsetApp</title>
@@ -45,4 +45,4 @@
     </div>
     <!-- add footer w note acknowledging openFDA API -->
   </body>
-</html>
+</html> --> %>
