--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,10 @@
-<%# <!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <title>MsetApp</title>
     <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag    'application', media: 'all' %>
-    <%= javascript_include_tag 'application' %>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
@@ -45,4 +43,4 @@
     </div>
     <!-- add footer w note acknowledging openFDA API -->
   </body>
-</html> --> %>
+</html>
