Add link to symptoms_path in log form_tag

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -39,7 +39,7 @@
   <div class="log-form">
     <center>
       <h3>Log a symptom here</h3><br>
-        <%= form_tag log_path, method: "post" do %>
+        <%= form_tag symptoms_path, method: "get" do %>
           <div class="row">
             <p class="col">
               <%= label_tag "What symptom did you experience?"%> <br>
