--- a/app/views/medications/new.html.erb
+++ b/app/views/medications/new.html.erb
@@ -2,7 +2,7 @@
 <p style="color:red"><%= render partial: '/partials/flash' %></p>
 <section class="med_search_form">
   <%= form_tag "/medications/search", method: :get %>
-  <%= label_tag :brand_name %>
-  <%= text_field_tag :brand_name %>
-  <%= submit_tag "Find Medication" %>
+  <%= label_tag :brand_name %><br>
+  <%= text_field_tag :brand_name %><br><br>
+  <%= submit_tag "Find Medication", class: "btn btn-primary" %>
 </section>
