Fix broken specs by changing have_button to have_link and related errors

--- a/app/views/medications/edit.html.erb
+++ b/app/views/medications/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>All Medications</h1>
 <%= render partial: '/partials/flash' %>
-<p><%= button_to 'Add New Medication', '/medications/new', method: :get %>
+<p><a href="/medications/new" class="btn btn-primary">Add New Medication</a>
 <br>
 <% @medications.each do |medication| %>
   <section class="medications">
