Add missing </li> tag

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -26,7 +26,7 @@
       <% else %>
         <ul>
            <% current_user.medications.each do |medication| %>
-             <li><%= medication.brand_name %>
+             <li><%= medication.brand_name %></li>
            <% end %>
          </ul>
          <%= button_to "Edit Medication List", "/medications/edit", method: :get %>
