--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -42,7 +42,7 @@
       <h4>Log a Symptom:</h4><br>
 
       <div class="form">
-        <%= form_tag logs_path, method: "post" do %>
+        <%= form_tag symptoms_search_path, method: :get do %>
         <div class="form-row">
           <div class="col-sm">
             <%= label_tag "What symptom did you experience?"%><br>
