--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -64,7 +64,7 @@
            	<%= datetime_field_tag :when %>
           </div>
           <div class="col-sm">
-            <%= text_area_tag :note %>
+            <%= text_area_tag :note, nil, class: "form-control" %>
           </div>
         </div>
         <div class="row">
