--- a/app/views/partials/_flash.html.erb
+++ b/app/views/partials/_flash.html.erb
@@ -1,3 +1,9 @@
-<% flash.each do |_, message| %>
-  <%= message %>
+<% flash.each do |type, message| %>
+  <% if type == "warning" %>
+    <div class="alert alert-danger" role="alert">
+      <%= message %>
+    </div>
+  <% else %>
+    <%= message %>
+  <% end %>
 <% end %>
