--- a/app/views/partials/_flash.html.erb
+++ b/app/views/partials/_flash.html.erb
@@ -3,6 +3,10 @@
     <div class="alert alert-danger" role="alert">
       <%= message %>
     </div>
+  <% elsif type == "success" %>
+    <div class="alert alert-success" role="alert">
+      <%= message %>
+    </div>
   <% else %>
     <%= message %>
   <% end %>
