Change back-to-dashboard button to be a new-search button

--- a/app/views/medications/new.html.erb
+++ b/app/views/medications/new.html.erb
@@ -8,4 +8,4 @@
   <% end %>
 </section>
 <br>
-<%= button_to 'Back to Dashboard', '/dashboard', method: :get %>
+<%= button_to 'New Search', medications_new_path, method: :get, class: "btn btn-primary" %>
