--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -77,20 +77,5 @@
 
     <div class="recent-logs">
       <h4>Recent Symptom Logs</h4>
-      <div class="log-list">
-        <% if current_user.logs.empty? %>
-          <p>You have not yet recorded any symptoms.</p>
-        <% else %>
-          <% current_user.most_recent_logs.each do |log| %>
-            <div class="row log">
-              <p class="col symptom"><%= log.symptom.description %></p>
-              <p class="col when"><%= log.when %></p>
-              <p class="col note"><%= log.note %></p><br>
-            </div>
-          <% end %>
-          <div class="row">
-            <a href="/logs" class="btn btn-link">See All Logs</a>
-          </div>
-        <% end %>
-      </div>
+      <%= render partial: '/partials/logs_list', locals: {logs: current_user.most_recent_logs} %>
     </div>
