--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -77,5 +77,10 @@
 
     <div class="recent-logs">
       <h4>Recent Symptom Logs</h4>
-      <%= render partial: '/partials/logs_list', locals: {logs: current_user.most_recent_logs} %>
+      <div class="log-list">
+        <%= render partial: '/partials/logs_list', locals: {logs: current_user.most_recent_logs} %>
+        <div class="row">
+          <a href="/logs" class="btn btn-primary">See All Logs</a>
+        </div>
+      </div>
     </div>
