--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,4 +3,4 @@
   <h1>Welcome to MSET</h1>
 </div>
 <p>Hello. I am your virtual pharmaceutical friend.</p>
-<%= button_to 'Get Started with Google Login', '/auth/google_oauth2', method: :get %>
+<a href="/auth/google_oauth2" class="btn btn-primary">Get Started with Google Login</a>
