--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,8 +14,6 @@
  */
 
 @import "bootstrap";
-@import "welcome";
-@import "dashboard";
 
 html, body {
  height: 100%;
@@ -24,14 +22,30 @@ html, body {
 body {
  display: flex;
  flex-direction: column;
+ background-color: #eee;
+ color: #444;
+}
+
+.navbar {
+  margin-bottom: 30px;
+  // background-color: #444;
+  // color: white;
 }
 
 .container {
-  flex: 1 0 auto;
+  display: flex;
+  flex-direction: column;
 }
 
-footer,  {
- flex-shrink: 0;
- text-align: center;
- margin-bottom: 20px;
+.footer {
+  text-align: center;
+  margin-bottom: 20px;
+  // background-color: blue;
 }
+
+h1, h2, h3, h4, h5 {
+  font-weight: bold;
+}
+
+@import "welcome";
+@import "dashboard";
