--- a/app/assets/stylesheets/dashboard/index.scss
+++ b/app/assets/stylesheets/dashboard/index.scss
@@ -1,40 +1,52 @@
 .page-header {
-  margin: 10px 0 40px 0px;
+  margin: 10px 0 30px 0px;
   // background-color: green;
 }
 
 .grid-container {
-  display: grid;
-  grid-template-columns: 1fr 3fr;
-  grid-template-rows: 1fr;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
 
-  grid-column-gap: 10px;
-  grid-template-areas:
-    "sidebar main";
-  // background-color: gray;
-  margin-bottom: 20px;
+  // display: grid;
+  // grid-template-columns: 1fr 3fr;
+  // grid-template-rows: 1fr;
+  //
+  // grid-column-gap: 10px;
+  // grid-template-areas:
+  //   "sidebar main";
+  margin-bottom: 30px;
 }
 
 .sidebar {
   height: 100%;
-  grid-area: sidebar;
-  // background-color: red;
+  // grid-area: sidebar;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  background-color: white;
+  padding: 30px;
 }
 
 .sidebar h4 {
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 
 .profile {
-  margin-bottom: 50px;
+  margin-bottom: 40px;
 }
 
 .med-list {
 }
 
 .main {
-  grid-area: main;
-  margin-bottom: 20px
+  height: 100%;
+  // grid-area: main;
+  // margin-bottom: 20px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  background-color: white;
+  padding: 30px;
 }
 
 .log-form {
