--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,46 +1,51 @@
 <center class="page-header">
   <h2>Welcome, <%= current_user.full_name %>! </h2>
-  <%= render partial: '/partials/flash' %>
 </center>
+<%= render partial: '/partials/flash' %>
+
 <div class="grid-container">
   <div class="sidebar">
     <div class="profile">
       <h4>Profile</h4>
-      <% if current_user.birthdate.nil? || current_user.birthdate.empty? %>
-        <p><strong>Date of birth:</strong> not saved</p>
-      <% else %>
-        <p><strong>Date of birth:</strong> <%= current_user.birthdate %></p>
-      <% end %>
-      <% if current_user.weight.nil? %>
-        <p><strong>Weight:</strong> not saved</p>
-      <% else %>
-        <p><strong>Weight:</strong> <%= current_user.weight %> lbs</p>
-      <% end %>
+      <div class="details"
+        <% if current_user.birthdate.nil? || current_user.birthdate.empty? %>
+          <p><strong>Date of birth:</strong> not saved</p>
+        <% else %>
+          <p><strong>Date of birth:</strong> <%= current_user.birthdate %></p>
+        <% end %>
+        <% if current_user.weight.nil? %>
+          <p><strong>Weight:</strong> not saved</p>
+        <% else %>
+          <p><strong>Weight:</strong> <%= current_user.weight %> lbs</p>
+        <% end %>
+      </div>
       <%= link_to "Edit Profile", "/profile/edit", method: :get %>
     </div>
 
     <div class="med-list">
       <h4>Medication List</h4>
-      <% if current_user.medications.empty? %>
-        <p>You don't have any saved medications.</p>
-        <a href="/medications/new" class="btn btn-primary">Add New Medication</a>
-      <% else %>
-        <ul>
-           <% current_user.medications.each do |medication| %>
-             <li><%= medication.brand_name %></li>
-           <% end %>
-         </ul>
-         <%= link_to "Edit Medication List", "/medications/edit", method: :get %>
-         <a href="/medications/new" class="btn btn-primary" >Add New Medication</a>
-      <% end %>
+      <div class="details">
+        <% if current_user.medications.empty? %>
+          <p>You don't have any saved medications.</p>
+          <a href="/medications/new" class="btn btn-primary">Add New Medication</a>
+        <% else %>
+          <ul>
+             <% current_user.medications.each do |medication| %>
+               <li><%= medication.brand_name %></li>
+             <% end %>
+           </ul>
+           <%= link_to "Edit Medication List", "/medications/edit", method: :get %>
+           <a href="/medications/new" class="btn btn-primary">Add New Medication</a>
+        <% end %>
+      </div>
     </div>
   </div>
   <div class="main">
 
     <div class="log-form">
 
-      <h4>Log a Symptom:</h4><br>
-
+      <h4>Log a Symptom</h4><br>
+      <!-- there will be a search input field and search button here instead of the following form -->
       <div class="form">
         <%= form_tag symptoms_search_path, method: :get do %>
         <div class="form-row">
@@ -57,10 +62,10 @@
 
         <div class="form-row">
           <div class="col-sm">
-            <%= text_field_tag :symptom, nil, placeholder: 'Search Symptoms' %>
+            <%= text_field_tag :symptom, nil, placeholder: 'Search Symptoms', class: "form-control" %>
           </div>
           <div class="col-sm">
-           	<%= datetime_field_tag :when %>
+           	<%= datetime_field_tag :when, class: "form-control" %>
           </div>
           <div class="col-sm">
             <%= text_area_tag :note, nil, class: "form-control" %>
