Move button under log-list

--- a/app/assets/stylesheets/dashboard/index.scss
+++ b/app/assets/stylesheets/dashboard/index.scss
@@ -69,6 +69,10 @@
   margin-bottom: 10px;
 }
 
+.log-list a {
+  margin: 15px 0px 0px 15px;
+}
+
 .input {
   box-sizing: border-box;
   font-size: 2rem;
